Finishing touches/ fix spacing

--- a/style/app.css
+++ b/style/app.css
@@ -45,7 +45,7 @@ p {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 100px 20px;
 }
 
 .hero p {
@@ -63,7 +63,7 @@ p {
 }
 
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
   color: antiquewhite;
 }
 
@@ -166,6 +166,7 @@ footer .social-links a:hover {
 
 footer .email-link {
   font-size: 20px;
+  color: antiquewhite;
 }
 
 footer .email-link:hover {
